# interpret-personas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
apps/sae-persona-explorer/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.js  vite.config.ts
apps/sae-persona-explorer/public/: bundle.json  bundle_centered.json  bundle_non_centered.json
apps/sae-persona-explorer/public/persona-drift/: runs_manifest.example.json  runs_manifest.json
apps/sae-persona-explorer/public/persona-drift/runs/gemma-3-27b-it_20260216_223357_272ffe660f/: conversation.json  summary.json  ui_bundle.json
apps/sae-persona-explorer/public/persona-drift/runs/gemma-3-27b-it_20260216_223447_a44e22d80f/: conversation.json  (+2 more)
apps/sae-persona-explorer/src/: App.tsx  main.tsx  styles.css  types.ts  utils.ts
apps/sae-persona-explorer/src/drift/: PersonaDriftView.tsx  styles.css  types.ts  utils.ts
configs/: aggregation.yaml  extraction.yaml  generation.yaml  visualization.yaml
interpret_personas/: __init__.py  config.py  utils.py
interpret_personas/aggregation/: __init__.py  aggregator.py
interpret_personas/extraction/: __init__.py  feature_extractor.py  sae_loader.py
interpret_personas/generation/: data_loader.py  generator.py
interpret_personas/visualization/: __init__.py  bundle_builder.py
notebooks/: persona_drift.ipynb  select_features.ipynb  select_role_features.ipynb  test_hook_extraction.ipynb
pipeline/: 1_generate.py  2_extract_features.py  3_aggregate.py  4_build_viz_bundle.py  5_fetch_neuronpedia_cache.py
(+12 files in other folders)
