[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interpret-personas"
version = "0.1.0"
description = "Mechanistic interpretability pipeline for extracting and analyzing SAE features from role-prompted LLM responses"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sae-lens>=6.33.0",
    "transformer-lens>=3.0.0b0",
    "vllm>=0.6.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "jsonlines>=4.0.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
